--- a/views/user.hbs
+++ b/views/user.hbs
@@ -8,9 +8,13 @@
         font-family: Helvetica, Arial, sans-serif;
       }
 
-      div {
+      h1 {
+          margin-top:0;
+      }
+
+      div.container {
         display:flex;
-        align-items: center;
+        align-items: flex-start;
         padding: 1em;
         font-size: 1.2em;
       }
@@ -18,10 +22,113 @@
       div a {
         padding-left: 0.5em;
       }
+
+      div.nav {
+        width: 100%;
+        height: 100px;
+      }
+
+      img {
+        padding-right: 2em;
+      }
+
+      input {
+          font-weight: 1em
+      }
+
+      dt {
+          font-weight: bolder;
+          margin-left: 0;
+          width: 4em;
+          float:left;
+      }
+
+      dd {
+          display:inline-block;
+          margin-left: 0;
+          line-height: 1.5em;
+      }
+
+      .edit {
+        display:none;
+      }
     </style>
   </head>
   <body>
-    <h1>{{username}}</h1>
-    <img src="/profilepics/{{username}}_lg.jpg" alt="">
+    <div class="nav">
+      <a href="/">Back to Users List</a>
+    </div>
+
+    <div class="container">
+      <div class="pic">
+        <img src="/profilepics/{{user.username}}_med.jpg" alt="" />
+        <p>
+          <a href="#" onclick="edit()">Edit</a>
+          <a href="#" onclick="del()">Delete</a>
+        </p>
+      </div>
+
+      <div>
+        <h1>{{user.name.full}}</h1>
+        <dl>
+          <dt>Street</dt>
+          <dd class="view">{{address.street}}</dd>
+          <dd class="edit"><input id="street" type="text" value="{{address.street}}"/></dd>
+          <br>
+          <dt>City</dt>
+          <dd class="view">{{address.city}}</dd>
+          <dd class="edit"><input id="city" type="text" value="{{address.city}}"/></dd>
+          <br>
+          <dt>Zip</dt>
+          <dd class="view">{{address.zip}}</dd>
+          <dd class="edit"><input id="zip" type="text" value="{{address.zip}}"/></dd>
+          <br>
+          <dt></dt>
+          <dd class="edit">
+            <input type="submit" name="" value="Save" onclick="save()">
+            <input type="submit" name="" value="Cancel" onclick="cancel()">
+          </dd>
+        </dl>
+      </div>
+    </div>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!-- <script src="/assets/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+    <script type="text/javascript">
+      function edit(){
+        $('.view').hide();
+        $('.edit').show();
+      }
+
+      function cancel(){
+        $('.view').show();
+        $('.edit').hide();
+      }
+
+      function save(){
+        $.ajax('/{{user.username}}', {
+          method: 'PUT',
+          data: {
+            street: $('#street').val(),
+            city: $('#city').val(),
+            state: $('#state').val(),
+            zip: $('#zip').val()
+          },
+          complete: function(){
+            cancel();
+            location.reload();
+          }
+        })
+      }
+
+      function del(){
+        $.ajax('/{{user.username}}', {
+          method: 'DELETE',
+          complete: function(){
+            location = '/'
+          }
+        })
+      }
+    </script>
   </body>
 </html>
