--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>User Index</title>
-    <style media="screen">
-      * {
+
+<head>
+  <meta charset="utf-8">
+  <title>User Index</title>
+  <style media="screen">
+    * {
         font-family: Helvetica, Arial, sans-serif;
       }
 
@@ -53,82 +54,88 @@
         display:none;
       }
     </style>
-  </head>
-  <body>
-    <div class="nav">
-      <a href="/">Back to Users List</a>
+</head>
+
+<body>
+  <div class="nav">
+    <a href="/">Back to Users List</a>
+  </div>
+
+  <div class="container">
+    <div class="pic">
+      <img src="/profilepics/{{user.username}}_med.jpg" alt="" />
+      <p>
+        <a href="#" onclick="edit()">Edit</a>
+        <a href="#" onclick="del()">Delete</a>
+      </p>
     </div>
 
-    <div class="container">
-      <div class="pic">
-        <img src="/profilepics/{{user.username}}_med.jpg" alt="" />
-        <p>
-          <a href="#" onclick="edit()">Edit</a>
-          <a href="#" onclick="del()">Delete</a>
-        </p>
-      </div>
-
-      <div>
-        <h1>{{user.name.full}}</h1>
-        <dl> 
-          <dt>Street</dt>
-          <dd class="view">{{address.street}}</dd>
-          <dd class="edit"><input id="street" type="text" value="{{address.street}}"/></dd>
-          <br>
-          <dt>City</dt>
-          <dd class="view">{{address.city}}</dd>
-          <dd class="edit"><input id="city" type="text" value="{{address.city}}"/></dd>
-          <br>
-          <dt>Zip</dt>
-          <dd class="view">{{address.zip}}</dd>
-          <dd class="edit"><input id="zip" type="text" value="{{address.zip}}"/></dd>
-          <br>
-          <dt></dt>
-          <dd class="edit">
-            <input type="submit" name="" value="Save" onclick="save()">
-            <input type="submit" name="" value="Cancel" onclick="cancel()">
-          </dd>
-        </dl>
-      </div>
+    <div>
+      <h1>{{user.name.full}}</h1>
+      <dl>
+        <dt>Street</dt>
+        <dd class="view">{{address.street}}</dd>
+        <dd class="edit"><input id="street" type="text" value="{{address.street}}" /></dd>
+        <br>
+        <dt>City</dt>
+        <dd class="view">{{address.city}}</dd>
+        <dd class="edit"><input id="city" type="text" value="{{address.city}}" /></dd>
+        <br>
+        <dt>State</dt>
+        <dd class="view">{{address.state}}</dd>
+        <dd class="edit"><input id="state" type="text" value="{{address.state}}" /></dd>
+        <br>
+        <dt>Zip</dt>
+        <dd class="view">{{address.zip}}</dd>
+        <dd class="edit"><input id="zip" type="text" value="{{address.zip}}" /></dd>
+        <br>
+        <dt></dt>
+        <dd class="edit">
+          <input type="submit" name="" value="Save" onclick="save()">
+          <input type="submit" name="" value="Cancel" onclick="cancel()">
+        </dd>
+      </dl>
     </div>
+  </div>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- <script src="/assets/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
-    <script type="text/javascript">
-      function edit(){
-        $('.view').hide();
-        $('.edit').show();
-      }
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <!-- <script src="/assets/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+  <script type="text/javascript">
+    function edit() {
+      $('.view').hide();
+      $('.edit').show();
+    }
 
-      function cancel(){
-        $('.view').show();
-        $('.edit').hide();
-      }
+    function cancel() {
+      $('.view').show();
+      $('.edit').hide();
+    }
 
-      function save(){
-        $.ajax('/{{user.username}}', {
-          method: 'PUT',
-          data: {
-            street: $('#street').val(),
-            city: $('#city').val(),
-            state: $('#state').val(),
-            zip: $('#zip').val()
-          },
-          complete: function(){
-            cancel();
-            location.reload();
-          }
-        })
-      }
+    function save() {
+      $.ajax('/{{user.username}}', {
+        method: 'PUT',
+        data: {
+          street: $('#street').val(),
+          city: $('#city').val(),
+          state: $('#state').val(),
+          zip: $('#zip').val()
+        },
+        complete: function () {
+          cancel();
+          location.reload();
+        }
+      })
+    }
 
-      function del(){
-        $.ajax('/{{user.username}}', {
-          method: 'DELETE',
-          complete: function(){
-            location = '/'
-          }
-        })
-      }
-    </script>
-  </body>
+    function del() {
+      $.ajax('/{{user.username}}', {
+        method: 'DELETE',
+        complete: function () {
+          location = '/'
+        }
+      })
+    }
+  </script>
+</body>
+
 </html>
